text align problem fixed

--- a/twitter-1/public/css/style.css
+++ b/twitter-1/public/css/style.css
@@ -411,6 +411,7 @@ th, td {
 
 .no-tweet{
     margin:auto;
+    text-align: justify;
 }
 
 .ThemeGraphe {
